# Smart-Mobility-Engineering

./: 12204556.sh  12204556_cli_tools.sh  12204556_client_libraries.sh  12204556_intermediate.sh  12204556_week6_hw_advanced.sh  README.md  README_CLITOOLS_CLIENTLIBRARIES.md  Readme file for Intermediate tutorial  readme_advanced.md  readme_intermediate.md
12204556_week7_hw_action/: readme.md
12204556_week7_hw_action/12204556_week7_hw_action_with_ultrasonicsensor/obstacle_avoidance/: CMakeLists.txt  package.xml
12204556_week7_hw_action/12204556_week7_hw_action_with_ultrasonicsensor/obstacle_avoidance/action/: ObstacleAvoidance.action
12204556_week7_hw_action/12204556_week7_hw_action_with_ultrasonicsensor/obstacle_avoidance_server/: CMakeLists.txt  package.xml
12204556_week7_hw_action/12204556_week7_hw_action_with_ultrasonicsensor/obstacle_avoidance_server/src/: obstacle_avoidance_client.cpp  obstacle_avoidance_server.cpp
1220556_SMS_MIDTERM/: README.md
